"Isn't" or "Aren't"?
Now that I'm proposing the change, I'm not sure if it's the case, but "Is there not ..." seems more awkward than "Are there not ..."

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <p class="lead">
-                Isn't there 101 other Pokémon websites already?
+                Aren't there 101 other Pokémon websites already?
             </p>
             <div class="well">
                 <p>
